# bad-pixel-detection

./: .gitignore  CMakeLists.txt
src/: main.cpp
